# vibe-oopsie

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vibe_oopsie/: cli.py
src/vibe_oopsie/detectors/: patterns.py
src/vibe_oopsie/git/: objects.py
src/vibe_oopsie/output/: console.py
src/vibe_oopsie/scanners/: dangling.py  full.py
tests/: test_patterns.py
