[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-oopsie"
version = "0.1.0"
description = "find secrets in git history that people thought were gone"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
vibe-oopsie = "vibe_oopsie.cli:main"

[project.urls]
Repository = "https://codeberg.org/eternitydebrief/vibe-oopsie"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_oopsie"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
